# c_project

./: .bazelrc  BUILD  WORKSPACE  compile_commands.json  readme
proto_project/: BUILD.bazel  file.proto
test_project/: BUILD  Person.cpp  Person.h  main.cpp
